--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ img {
     color: #212121;
     padding-top: 32px;
     padding-bottom: 32px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-email  {
@@ -94,6 +95,7 @@ img {
     letter-spacing: 0.02em;
     color: #757575;
     margin-right: 50px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .header-tel {
@@ -106,6 +108,7 @@ img {
     display: flex;
     align-content: center;
     justify-content: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .tel-icon {
@@ -135,6 +138,21 @@ img {
     fill: var(--accent-color);
 }
 
+.current {
+    color: var(--accent-color);
+    position: relative;
+}
+
+.current::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position:absolute;
+    background-color: var(--accent-color);
+    left: 0;
+    bottom: 0;
+}
 /*---------------------SOLUTIONS---------------------*/
 
 .solutions-title {
@@ -285,10 +303,12 @@ margin-right: 30px ;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .teammate-social-icon {
     fill: #AFB1B8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .teammate-social-link:hover .teammate-social-icon,  
@@ -383,8 +403,7 @@ margin-right: 30px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     justify-content: center;
-    
-
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-list {
@@ -398,6 +417,7 @@ margin-right: 30px;
 .client-icon {
     fill: #AFB1B8;
     margin: 16px 32px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover .client-icon,  
@@ -451,6 +471,7 @@ margin-right: 30px;
     margin-bottom: 9px;
     font-style: normal;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-email, .footer-tel {
@@ -462,6 +483,7 @@ margin-right: 30px;
     margin-bottom: 9px;
     font-style: normal;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-tel {
@@ -472,6 +494,7 @@ margin-right: 30px;
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-addres:hover, 
@@ -509,6 +532,7 @@ margin-right: 30px;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-list {
@@ -537,7 +561,7 @@ margin-right: 30px;
 
 .nav-btn {
     padding-top: 94px;
-    padding-bottom: 94px;
+    padding-bottom: 94px; 
 }
 .portfolio-nav-btn {
     font-family: inherit;
@@ -552,6 +576,7 @@ margin-right: 30px;
     cursor: pointer;
     border-color: transparent;
     padding: 6px 22px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-btn-item:not(:last-child) {
@@ -580,6 +605,7 @@ margin-right: 30px;
     width: calc(100% / 9 - 30);
     margin-bottom: 30px;
     margin-left: 30px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-item:hover, .projects-item:focus {
