--- a/css/styles.css
+++ b/css/styles.css
@@ -606,6 +606,33 @@ margin-right: 30px;
     margin-bottom: 30px;
     margin-left: 30px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 370px;
+    
+}
+
+.projects-item-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.projects-img-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(33, 150, 243, 0.9);;
+    color: var(--first-title-color);
+    font-family: Roboto;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    padding: 63px 24px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-item:hover .projects-img-text {
+    transform: translateY(0);
 }
 
 .projects-item:hover, .projects-item:focus {
@@ -640,4 +667,48 @@ margin-right: 30px;
     line-height: 1.875x;
     letter-spacing: 0.03em;
     color: #757575;
+}
+
+/*---------------------MODAL-WINDOW---------------------*/
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);;
+    transition: opacity 250ms, visibility 250ms;
+}
+
+.modal {
+    width: 528px;
+    min-height: 581px;
+    background-color: #ffffff;
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-btn-cloae {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
 }
