--- a/css/styles.css
+++ b/css/styles.css
@@ -377,6 +377,27 @@ margin-right: 30px;
     text-align: center;
     margin-bottom: 16px;
 }
+
+.after-about-wrap {
+    position: relative;
+}
+
+.after-about-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--first-title-color);
+    padding-top: 27px;
+    padding-bottom: 27px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8)
+}
 /*---------------------CLIENT---------------------*/
 
 .client {
@@ -607,7 +628,6 @@ margin-right: 30px;
     margin-left: 30px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 370px;
-    
 }
 
 .projects-item-wrap {
@@ -627,6 +647,7 @@ margin-right: 30px;
     letter-spacing: 0.03em;
     padding: 63px 24px;
     height: 100%;
+    width: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
