--- a/css/styles.css
+++ b/css/styles.css
@@ -421,9 +421,10 @@ margin-right: 30px;
     background-color: unset;
     display: flex;
     justify-content: center;
+    align-items: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
-    justify-content: center;
+    
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -437,7 +438,6 @@ margin-right: 30px;
 
 .client-icon {
     fill: #AFB1B8;
-    margin: 16px 32px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
